# sedimark-issuer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
Issuer/: Issue Credential.bru  Revoke Credential.bru  bruno.json  collection.bru  get challenge.bru
Issuer/environments/: Test.bru
abi/: identity_sc.json  idsc_abi.json
abigen/: Cargo.toml
abigen/src/: main.rs
api/: specifications.yaml
kubernetes/: 000-issuer-namespace.yaml  005-issuer-postgres-pvc.yaml  005-issuer-pvc.yaml  010-issuer-configmap.yaml  010-issuer-postgres-configmap.yaml  015-docker-registry-secret.yaml  015-issuer-postgres-secret.yaml  015-issuer-secret.yaml  020-issuer-deployment.yaml  020-issuer-postgres-deployment.yaml  025-issuer-postgres-svc.yaml  025-issuer-svc.yaml
mediterraneus-issuer/: Cargo.toml
mediterraneus-issuer/src/: lib.rs  main.rs  utils.rs
mediterraneus-issuer/src/config/: config.rs
mediterraneus-issuer/src/controllers/: issuer_controller.rs  mod.rs
mediterraneus-issuer/src/db/: operations.rs
mediterraneus-issuer/src/db/sql/: get_identity_did.sql  insert_identity_issuer.sql
mediterraneus-issuer/src/dtos/: identity_dtos.rs
mediterraneus-issuer/src/handler/: issuer_handler.rs  mod.rs
mediterraneus-issuer/src/issuer/: common.rs  issuer_identity.rs  issuer_wallet.rs  mod.rs
mediterraneus-issuer/src/migrations/: dbinit.sql
mediterraneus-issuer/src/models/: models.rs
mediterraneus-issuer/src/services/: issuer_wallet.rs
mediterraneus-issuer/src/walletdb/: 000028.sst  000031.sst  IDENTITY  LOG  LOG.old.1690904200644731  LOG.old.1690904245270440  LOG.old.1690904986799197  LOG.old.1690905849720776  LOG.old.1690906246189232  MANIFEST-000033  OPTIONS-000035
server/: .env.example  .gitignore  Cargo.toml  docker-compose.yml
server/src/: errors.rs  lib.rs  main.rs
server/src/contracts/: mod.rs
server/src/dtos/: identity_dtos.rs
server/src/handlers/: addresses_handler.rs  challenges_handler.rs  credentials_handler.rs  mod.rs
server/src/middlewares/: mod.rs  ver_presentation_jwt.rs
server/src/repository/: mod.rs  models.rs  operations.rs  postgres_repo.rs
server/src/repository/sql/: dbinit.sql  holders_challenges_cleanup.sql  holders_challenges_get.sql  holders_challenges_insert.sql  holders_challenges_remove.sql  identities_get.sql  identities_insert.sql
server/src/services/: challenges_service.rs  credentials_service.rs  issuer_identity.rs  issuer_vc.rs  mod.rs
server/src/utils/: configs.rs  eth.rs  ether_utils.rs  iota.rs  iota_utils.rs  mod.rs
smart-contracts/: Identity.json
src/: lib.rs  main.rs  utils.rs
src/config/: config.rs  mod.rs
src/db/: mod.rs  models.rs  operations.rs
src/db/migrations/: dbinit.sql
src/db/sql/: get_request_by_did.sql  (+6 more)
src/dtos/: challenges_dtos.rs  identity_dtos.rs  mod.rs
src/errors/: errors.rs  mod.rs
src/handler/: issuer_handler.rs
src/handlers/: challenges_handler.rs  credentials_handler.rs  mod.rs  purchase_credentials_handler.rs
src/migrations/: dbinit.sql
src/services/: challenges_service.rs  credentials_service.rs  idsc_wrappers.rs  issuer_identity.rs  issuer_vc.rs  issuer_wallet.rs  mod.rs  purchase_credentials_service.rs
src/utils/: ether_utils.rs  iota_utils.rs  mod.rs
(+2 files in other folders)
