[package]
name = "mediterraneus-issuer-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
anyhow = "1.0.71"
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
actix-cors = "0.6.4"
iota-client = { version = "=2.0.1-rc.7" }
iota-wallet = "=1.0.0-rc.6"
identity_iota = "=0.7.0-alpha.5"
derive_more = "0.99.7"
tokio = { version = "1.20.1", default-features = false, features = ["rt"] }
ethers = { version = "2.0.8", features = ["legacy"] }
reqwest = { version = "0.11.18", features = ["json"] }

[lib]
name = "mediterraneus_issuer"
path = "src/lib.rs"
