[package]
name = "abigen"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.8", features = ["legacy"] }
clap = { version = "4.4.2", features = ["derive"] }
eyre = "0.6.11"