[package]
name = "mediterraneus-issuer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
env_logger = "0.10.0"
anyhow = "1.0.71"
tokio = { version = "1.20.1", default-features = false, features = ["rt"] }
postgres = "0.19.5"
