[package]
name = "mediterraneus-issuer-rs"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-lab = "0.20.1"
actix-cors = "0.6.4"

log = "0.4.0"
env_logger = "0.10.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.71"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
iota-sdk = { version = "1.1.2", features = ["stronghold"]}
identity_iota = { version = "1.3.*", features = ["memstore"]}
identity_eddsa_verifier = "1.0.0"
identity_stronghold = "1.0.0"
tokio = { version = "1.20.1", default-features = false, features = ["rt"] }
ethers = { version = "2.0.8", features = ["legacy"] }
reqwest = { version = "0.11.18", features = ["json"] }
clap = { version = "4.4.2", features = ["derive", "env"] }
uuid = {version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
thiserror = "1.0.50"
async-trait = "0.1.79"
zeroize="1.8.0"
dotenv = "0.15.0"


[profile.develop] #optimize iota sdk even in debug mode
debug-assertions = true
inherits = "release"

[lib]
name = "mediterraneus_issuer"
path = "src/lib.rs"

[[bin]]
name = "issuer"
path= "src/main.rs"
